Applied updates to index, finished 80% of mobile view for about-us, Added new assets based on figma

--- a/about-us.html
+++ b/about-us.html
@@ -65,8 +65,12 @@
 
     <section class="about-us">
         <div class="row about-us_row">
+            
+            <div class="col-12 about-title_mobile mb-5" style="display: none;">
+                <span>About Us</span>
+            </div>
             <div
-                class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 d-flex flex-column justify-content-start align-items-start mb-5">
+                class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 d-flex flex-column justify-content-start align-items-start mb-1 mission-vision">
                 <span class="about-title_text mb-5">
                     About Us
                 </span>
@@ -90,7 +94,7 @@
                 </span>
             </div>
 
-            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 d-flex justify-content-end mb-5">
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 d-flex justify-content-end mb-5 about-image">
                 <img src="assets/about-1.png" class="about-image_first">
             </div>
 
@@ -98,7 +102,7 @@
                 <img src="assets/about-2.png" class="about-image_second">
             </div>
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-5">
-                <div class="about-subtitle mb-3 d-flex justify-content-end">
+                <div class="values about-subtitle mb-3 d-flex justify-content-end">
                     CORE VALUES
                 </div>
 
