--- a/index.html
+++ b/index.html
@@ -68,16 +68,16 @@
                     Welcome to WORKSYNC
                 </span>
 
-                <span class="welcome-desc text-center">
+                <span class="welcome-desc text-center mb-5">
                     WORKSYNC SOLUTIONS CORP. is a manpower service solutions company aimed in providing long-term
                     solutions to staffing needs. Our extensive knowledge and experience in Quality, Productivity and
                     Innovation would redefine the industry.
                     <br> <br>
-                    We place an emphasis on <strong>efficiency</strong>, <strong>innovative training</strong> and
-                    <strong>technology solutions</strong> empowering our clients for global success.
+                    We place an emphasis on <span style="font-weight: 700;">efficiency</span>, <span style="font-weight: 700;">innovative training</span> and
+                    <span style="font-weight: 700;">technology solutions</span> empowering our clients for global success.
                 </span>
 
-                <img src="assets/welcome-clipart.png" class="mt-5">
+                <img src="assets/home_welcome.png" class="mt-5">
             </div>
         </div>
     </section>
@@ -85,22 +85,40 @@
     <!-- Why choose us -->
 
     <section class="why position-relative" id="why">
-        <!-- <img src="assets/why-carry.png" class="carry position-absolute"> -->
+        <img src="assets/home_why.png" class="carry position-absolute" style="z-index: 999;">
         <div class="row why-row">
             <div
-                class="col-xs-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 why-left d-flex align-items-end justify-content-center">
-                <img src="assets/why.png">
+                class="col-xs-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 why-left d-flex align-items-center justify-content-end flex-column">
+                <img src="assets/why.png" class="mb-4">
+                <span class="why-desc mt-5">
+                    At WorkSync Solutions Corp., we are dedicated to understanding the <strong>unique needs of our
+                        clients</strong> and delivering tailored solutions that drive success.
+                    <br> <br>
+                    Join us in experiencing staffing solutions that are effective, and aligned with the demands of
+                    the modern workplace.
+                </span>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 why-right">
                 <div class="d-flex flex-column justify-between align-items-center w-100">
-                    <img src="assets/question-mark.png">
-                    <span>
-                        At WorkSync Solutions Corp., we are dedicated to understanding the <strong>unique needs of our
-                            clients</strong> and delivering tailored solutions that drive success.
-                        <br> <br>
-                        Join us in experiencing staffing solutions that are effective, and aligned with the demands of
-                        the modern workplace.
+                    <span class="why-title mb-3">
+                        SOURCE TO HIRE EMPLOYEE ACCOUNT / CLIENT PROCESS MANAGEMENT MANAGEMENT
                     </span>
+
+                    <ul class="why-list">
+                        <li class="why-item">Stringent Capabilities, Skills, and Integrity Assessment / Pre-screening.</li>
+                        <li class="why-item">Use of social media screening process when necessary.</li>
+                        <li class="why-item">Technology Enabled Recruitment and Applicants Tracking and Management.</li>
+                        <li class="why-item">Ticketing System to Streamline Manpower Requisition Process.</li>
+                        <li class="why-item">Comprehensive Training on the Basics of Productivity and Quality Improvement Prior to Placement.</li>
+                        <li class="why-item">Technology Enabled Time Keeping and Attendance System.</li>
+                        <li class="why-item">Regular Performance Review and Feedback Mechanism.</li>
+                        <li class="why-item">Empowering Employee to Identify Opportunities for Process Improvement.</li>
+                        <li class="why-item">Ticketing System to Manage Client Requests and Escalations.</li>
+                        <li class="why-item">Defined Service Level Agreement.</li>
+                        <li class="why-item">Data Analytics / Dashboard Reporting.</li>
+                        <li class="why-item">Regular Client Cadence Meeting to Review Performance and Discuss Opportunities for Improvement.</li>
+                        <li class="why-item">HRIS / Payroll Solution Implementation (For Development).</li>
+                    </ul>
                 </div>
             </div>
         </div>
