--- a/services.html
+++ b/services.html
@@ -65,13 +65,60 @@
             </div>
 
             <div class="col-12 carousel-desc mb-5">
-                <span>At WORKSYNC Solutions Corp., we offer a wide range of manpower services tailored to meet your
+                <span class="desktop-desc">At WORKSYNC Solutions Corp., we offer a wide range of manpower services
+                    tailored to meet your
                     specific needs, from quality control and packaging to warehousing, maintenance, transportation, and
                     administrative support. Our focus on quality, efficiency, and innovation ensures you receive
                     cutting-edge solutions that enhance productivity and performance. Discover how our expert team can
                     help you achieve your business goals with precision and excellence.</span>
+
+                <span class="mobile-desc d-none mt-3">
+                    At WORKSYNC, we dedicate ourselves to offering unparalleled services in the field of human capital.
+                    We understand the value of a skilled workforce and are committed to providing the best staffing
+                    solutions for the following needs.
+                </span>
             </div>
         </div>
+
+        <div class="section mobile-card">
+            <div class="row">
+                <div class="col-md-12 mb-5">
+                    <div class="card card-div">
+                        <img src="assets/about-1.png" class="card-img-top" alt="Image 1">
+                        <div class="card-body">
+                            <h5 class="card-title">FACTORY SUPPORT STAFF</h5>
+                            <p class="card-text">Our factory support team ensures top product quality and safety by
+                                conducting thorough inspections at each production stage, maintaining consistency and
+                                preventing defects to deliver. Additionally, they handle packing and sorting, ensuring
+                                accurate categorization and packaging for distribution. </p>
+                            <div class="card-button-col w-100 d-flex justify-content-end">
+                                <button class="card-button">
+                                    MORE INFO
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12 mb-5">
+                    <div class="card card-div">
+                        <img src="assets/about-1.png" class="card-img-top" alt="Image 1">
+                        <div class="card-body">
+                            <h5 class="card-title">WAREHOUSE AND MATERIALS HANDLING</h5>
+                            <p class="card-text">We facilitate the efficient storage, handling, and distribution of
+                                goods within your supply chain. Our warehousing solutions are designed to optimize
+                                space, improve inventory management, and ensure timely dispatch, providing a seamless
+                                flow of materials and products. </p>
+                            <div class="card-button-col w-100 d-flex justify-content-end">
+                                <button class="card-button">
+                                    MORE INFO
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div id="carouselExample" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -81,7 +128,8 @@
                                 <img src="assets/about-1.png" class="card-img-top" alt="Image 1">
                                 <div class="card-body">
                                     <h5 class="card-title">FACTORY SUPPORT STAFF</h5>
-                                    <p class="card-text">Our factory support team ensures top product quality and safety. They conduct thorough inspections at...</p>
+                                    <p class="card-text">Our factory support team ensures top product quality and
+                                        safety. They conduct thorough inspections at...</p>
                                     <div class="gradientback">
 
                                     </div>
@@ -98,7 +146,8 @@
                                 <img src="assets/about-1.png" class="card-img-top" alt="Image 2">
                                 <div class="card-body">
                                     <h5 class="card-title">FACTORY SUPPORT STAFF</h5>
-                                    <p class="card-text">Our factory support team ensures top product quality and safety. They conduct thorough inspections at...</p>
+                                    <p class="card-text">Our factory support team ensures top product quality and
+                                        safety. They conduct thorough inspections at...</p>
                                     <div class="gradientback">
 
                                     </div>
@@ -115,7 +164,8 @@
                                 <img src="assets/about-1.png" class="card-img-top" alt="Image 3">
                                 <div class="card-body">
                                     <h5 class="card-title">FACTORY SUPPORT STAFF</h5>
-                                    <p class="card-text">Our factory support team ensures top product quality and safety. They conduct thorough inspections at...</p>
+                                    <p class="card-text">Our factory support team ensures top product quality and
+                                        safety. They conduct thorough inspections at...</p>
                                     <div class="gradientback">
 
                                     </div>
@@ -132,7 +182,8 @@
                                 <img src="assets/about-1.png" class="card-img-top" alt="Image 4">
                                 <div class="card-body">
                                     <h5 class="card-title">FACTORY SUPPORT STAFF</h5>
-                                    <p class="card-text">Our factory support team ensures top product quality and safety. They conduct thorough inspections at...</p>
+                                    <p class="card-text">Our factory support team ensures top product quality and
+                                        safety. They conduct thorough inspections at...</p>
                                     <div class="gradientback">
 
                                     </div>
@@ -153,7 +204,8 @@
                                 <img src="assets/about-1.png" class="card-img-top" alt="Image 5">
                                 <div class="card-body">
                                     <h5 class="card-title">FACTORY SUPPORT STAFF</h5>
-                                    <p class="card-text">Our factory support team ensures top product quality and safety. They conduct thorough inspections at...</p>
+                                    <p class="card-text">Our factory support team ensures top product quality and
+                                        safety. They conduct thorough inspections at...</p>
                                     <div class="gradientback">
 
                                     </div>
@@ -170,7 +222,8 @@
                                 <img src="assets/about-1.png" class="card-img-top" alt="Image 6">
                                 <div class="card-body">
                                     <h5 class="card-title">FACTORY SUPPORT STAFF</h5>
-                                    <p class="card-text">Our factory support team ensures top product quality and safety. They conduct thorough inspections at...</p>
+                                    <p class="card-text">Our factory support team ensures top product quality and
+                                        safety. They conduct thorough inspections at...</p>
                                     <div class="gradientback">
 
                                     </div>
@@ -187,7 +240,8 @@
                                 <img src="assets/about-1.png" class="card-img-top" alt="Image 7">
                                 <div class="card-body">
                                     <h5 class="card-title">FACTORY SUPPORT STAFF</h5>
-                                    <p class="card-text">Our factory support team ensures top product quality and safety. They conduct thorough inspections at...</p>
+                                    <p class="card-text">Our factory support team ensures top product quality and
+                                        safety. They conduct thorough inspections at...</p>
                                     <div class="gradientback">
 
                                     </div>
@@ -204,7 +258,8 @@
                                 <img src="assets/about-1.png" class="card-img-top" alt="Image 8">
                                 <div class="card-body">
                                     <h5 class="card-title">FACTORY SUPPORT STAFF</h5>
-                                    <p class="card-text">Our factory support team ensures top product quality and safety. They conduct thorough inspections at...</p>
+                                    <p class="card-text">Our factory support team ensures top product quality and
+                                        safety. They conduct thorough inspections at...</p>
                                     <div class="gradientback">
 
                                     </div>
