Finished modals for both desktop and mobile (join us and services)

--- a/services.html
+++ b/services.html
@@ -80,7 +80,7 @@
             </div>
         </div>
 
-        <div class="section mobile-card">
+        <div class="section mobile-card d-none">
             <div class="row">
                 <div class="col-md-12 mb-5">
                     <div class="card card-div">
@@ -92,7 +92,7 @@
                                 preventing defects to deliver. Additionally, they handle packing and sorting, ensuring
                                 accurate categorization and packaging for distribution. </p>
                             <div class="card-button-col w-100 d-flex justify-content-end">
-                                <button class="card-button">
+                                <button class="card-button btn" type="button" data-toggle="modal" data-target="#myModal">
                                     MORE INFO
                                 </button>
                             </div>
@@ -109,7 +109,7 @@
                                 space, improve inventory management, and ensure timely dispatch, providing a seamless
                                 flow of materials and products. </p>
                             <div class="card-button-col w-100 d-flex justify-content-end">
-                                <button class="card-button">
+                                <button class="card-button btn" type="button" data-toggle="modal" data-target="#myModal">
                                     MORE INFO
                                 </button>
                             </div>
@@ -136,7 +136,7 @@
                                 </div>
                             </div>
                             <div class="card-button-col w-100 d-flex justify-content-end">
-                                <button class="card-button">
+                                <button class="card-button btn" type="button" data-toggle="modal" data-target="#myModal">
                                     MORE
                                 </button>
                             </div>
@@ -154,7 +154,7 @@
                                 </div>
                             </div>
                             <div class="card-button-col w-100 d-flex justify-content-end">
-                                <button class="card-button">
+                                <button class="card-button btn" type="button" data-toggle="modal" data-target="#myModal">
                                     MORE
                                 </button>
                             </div>
@@ -172,7 +172,7 @@
                                 </div>
                             </div>
                             <div class="card-button-col w-100 d-flex justify-content-end">
-                                <button class="card-button">
+                                <button class="card-button btn" type="button" data-toggle="modal" data-target="#myModal">
                                     MORE
                                 </button>
                             </div>
@@ -190,7 +190,7 @@
                                 </div>
                             </div>
                             <div class="card-button-col w-100 d-flex justify-content-end">
-                                <button class="card-button">
+                                <button class="card-button btn" type="button" data-toggle="modal" data-target="#myModal">
                                     MORE
                                 </button>
                             </div>
@@ -212,7 +212,7 @@
                                 </div>
                             </div>
                             <div class="card-button-col w-100 d-flex justify-content-end">
-                                <button class="card-button">
+                                <button class="card-button btn" type="button" data-toggle="modal" data-target="#myModal">
                                     MORE
                                 </button>
                             </div>
@@ -230,7 +230,7 @@
                                 </div>
                             </div>
                             <div class="card-button-col w-100 d-flex justify-content-end">
-                                <button class="card-button">
+                                <button class="card-button btn" type="button" data-toggle="modal" data-target="#myModal">
                                     MORE
                                 </button>
                             </div>
@@ -248,7 +248,7 @@
                                 </div>
                             </div>
                             <div class="card-button-col w-100 d-flex justify-content-end">
-                                <button class="card-button">
+                                <button class="card-button btn" type="button" data-toggle="modal" data-target="#myModal">
                                     MORE
                                 </button>
                             </div>
@@ -266,7 +266,7 @@
                                 </div>
                             </div>
                             <div class="card-button-col w-100 d-flex justify-content-end">
-                                <button class="card-button">
+                                <button class="card-button btn" type="button" data-toggle="modal" data-target="#myModal">
                                     MORE
                                 </button>
                             </div>
@@ -284,6 +284,96 @@
             </a>
         </div>
     </section>
+
+    <!-- modal -->
+
+    <div class="modal fade full-page-modal" id="myModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="service-modal-row row w-100">
+                    <div class="col-12 d-flex justify-content-between w-100">
+                        <img src="assets/worksync-gold.png" class="modal-image">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+
+                    <div class="service-desktop-title col-12 mt-4">
+                        <span>Factory Support Staff</span>
+                    </div>
+
+                    <div class="col-12 service-desktop-items mt-5 d-flex justify-content-evenly align-items-center">
+                        <div class="service-desktop-item">
+                            <span class="service-desktop-item_title">
+                                PACKER/SORTER
+                            </span>
+
+                            <span class="service-desktop-item_desc">
+                                Screens out finished goods and in-process materials to meet the quality standards set
+                                for the specific product at the same time following all other applicable food safety
+                                regulations.
+                            </span>
+                        </div>
+                        <div class="service-desktop-item">
+                            <span class="service-desktop-item_title">
+                                QUALITY LINE INSPECTOR
+                            </span>
+
+                            <span class="service-desktop-item_desc">
+                                Ensures products produced on the manufacturing line meet established quality standards
+                                and specifications.
+                            </span>
+                        </div>
+                        <div class="service-desktop-item">
+                            <span class="service-desktop-item_title">
+                                QUALITY LINE INSPECTOR
+                            </span>
+
+                            <span class="service-desktop-item_desc">
+                                Ensures products produced on the manufacturing line meet established quality standards
+                                and specifications.
+                            </span>
+                        </div>
+                    </div>
+
+                    <div class="col-12 service-mobile-item w-100 d-none">
+                        <span class="service-mobile-item_title">
+                            QUALITY LINE INSPECTOR
+                        </span>
+
+                        <span class="service-mobile-item_desc">
+                            Ensures products produced on the manufacturing line meet established quality standards and
+                            specifications.
+                        </span>
+                    </div>
+                    <div class="col-12 service-mobile-item w-100 bordered d-none">
+                        <span class="service-mobile-item_title">
+                            PACKER/SORTER
+                        </span>
+
+                        <span class="service-mobile-item_desc">
+                            Screens out finished goods and in-process materials to meet the quality standards set for
+                            the specific product at the same time following all other applicable food safety
+                            regulations.
+                        </span>
+                    </div>
+                    <div class="col-12 service-mobile-item w-100 d-none">
+                        <span class="service-mobile-item_title">
+                            PACKER/SORTER
+                        </span>
+
+                        <span class="service-mobile-item_desc">
+                            Screens out finished goods and in-process materials to meet the quality standards set for
+                            the specific product at the same time following all other applicable food safety
+                            regulations.
+                        </span>
+                    </div>
+
+                    <div class="col-12 service-modal-button d-flex justify-content-center align-items-center w-100">
+                        <button>REQUEST FOR PROPOSAL</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Footer -->
 
