--- a/join-us.html
+++ b/join-us.html
@@ -35,7 +35,42 @@
 
     <!-- Header -->
 
+    <div class="modal fade full-page-modal" id="myModal">
+        <div class="modal-dialog">
+            <div class="modal-join-content">
+                <div class="service-modal-row row w-100">
+                    <div class="col-12 d-flex justify-content-between w-100 mb-5">
+                        <img src="assets/worksync-white.png" class="modal-image">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
 
+                    <div class="col-12 join-field d-flex flex-column align-items-start justify-content-start">
+                        <span class="join-field_title">NAME</span>
+                        <input type="text">
+                    </div>
+                    <div class="col-12 join-field d-flex flex-column align-items-start justify-content-start">
+                        <span class="join-field_title">CONTACT NUMBER</span>
+                        <input type="text">
+                    </div>
+                    <div class="col-12 join-field d-flex flex-column align-items-start justify-content-start">
+                        <span class="join-field_title">EMAIL</span>
+                        <input type="text">
+                    </div>
+                    <div class="col-12 join-field d-flex flex-column align-items-start justify-content-start">
+                        <span class="join-field_title">ATTACH RESUME</span>
+                        <button>Upload File<i class="bi bi-plus-circle"></i></button>
+                    </div>
+
+                    <div class="col-12 join-send w-100 d-flex justify-content-end align-items-center">
+                        <button>
+                            <i class="bi bi-send-fill"></i>
+                            SEND APPLICATION
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Intro -->
 
@@ -78,14 +113,14 @@
     <div class="row offering">
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 jobs d-flex flex-column right-job">
             <div class="job-title mb-2">Factory support staff</div>
-            <span class="job-sub">QC LINE INSPECTOR</span>
-            <span class="job-sub">SORTER</span>
-            <span class="job-sub">PACKER</span>
-            <span class="job-sub">MATERIALS HANDLER</span>
+            <button class="job-sub" data-toggle="modal" data-target="#myModal">QC LINE INSPECTOR</span>
+            <button class="job-sub" data-toggle="modal" data-target="#myModal">SORTER</button>
+            <button class="job-sub" data-toggle="modal" data-target="#myModal">PACKER</button>
+            <button class="job-sub" data-toggle="modal" data-target="#myModal">MATERIALS HANDLER</button>
 
             <div class="job-title mb-2 mt-4">Warehouse and materials handling</div>
-            <span class="job-sub">FORKLIFT OPERATOR</span>
-            <span class="job-sub">WAREHOUSEMAN CLERK</span>
+            <button class="job-sub" data-toggle="modal" data-target="#myModal">FORKLIFT OPERATOR</button>
+            <button class="job-sub" data-toggle="modal" data-target="#myModal">WAREHOUSEMAN CLERK</button>
         </div>
 
         <div
@@ -101,27 +136,27 @@
 
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 jobs d-flex flex-column align-items-end">
             <div class="job-title mb-2">Administrative and clerical support</div>
-            <span class="job-sub">CLERK</span>
-            <span class="job-sub">SECRETARY</span>
-            <span class="job-sub">ADMIN ASSISTANT</span>
-            <span class="job-sub">OPERATIONS ASSISTANT</span>
-            <span class="job-sub">HR ASSISTANT</span>
-            <span class="job-sub">EXECUTIVE ASSISTANT</span>
+            <button class="job-sub" data-toggle="modal" data-target="#myModal">CLERK</button>
+            <button class="job-sub" data-toggle="modal" data-target="#myModal">SECRETARY</button>
+            <button class="job-sub" data-toggle="modal" data-target="#myModal">ADMIN ASSISTANT</button>
+            <button class="job-sub" data-toggle="modal" data-target="#myModal">OPERATIONS ASSISTANT</button>
+            <button class="job-sub" data-toggle="modal" data-target="#myModal">HR ASSISTANT</button>
+            <button class="job-sub" data-toggle="modal" data-target="#myModal">EXECUTIVE ASSISTANT</button>
         </div>
     </div>
 
     <div class="row offering">
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 jobs d-flex flex-column right-job">
             <div class="job-title mb-2">Maintenance and Housekeeping</div>
-            <span class="job-sub">GARDENER</span>
-            <span class="job-sub">UTILITYMAN</span>
-            <span class="job-sub">JANITOR/MAINTENANCE</span>
+            <button class="job-sub" data-toggle="modal" data-target="#myModal">GARDENER</button>
+            <button class="job-sub" data-toggle="modal" data-target="#myModal">UTILITYMAN</button>
+            <button class="job-sub" data-toggle="modal" data-target="#myModal">JANITOR/MAINTENANCE</button>
 
             <div class="job-title mb-2 mt-4">Driving and Transportation</div>
-            <span class="job-sub">DELIVERY DRIVER</span>
-            <span class="job-sub">PAHINANTE</span>
-            <span class="job-sub">EXECUTIVE DRIVER</span>
-            <span class="job-sub">PERSONAL DRIVER</span>
+            <button class="job-sub" data-toggle="modal" data-target="#myModal">DELIVERY DRIVER</button>
+            <button class="job-sub" data-toggle="modal" data-target="#myModal">PAHINANTE</button>
+            <button class="job-sub" data-toggle="modal" data-target="#myModal">EXECUTIVE DRIVER</button>
+            <button class="job-sub" data-toggle="modal" data-target="#myModal">PERSONAL DRIVER</button>
         </div>
 
         <div
@@ -137,12 +172,12 @@
 
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 jobs d-flex flex-column align-items-end mb-5">
             <div class="job-title mb-2">Healthcare</div>
-            <span class="job-sub">COMPANY NURSE</span>
-            <span class="job-sub">PHYSICIAN</span>
+            <button class="job-sub" data-toggle="modal" data-target="#myModal">COMPANY NURSE</button>
+            <button class="job-sub" data-toggle="modal" data-target="#myModal">PHYSICIAN</button>
 
             <div class="job-title mb-2 mt-4">Sales and Merchandising</div>
-            <span class="job-sub">MERCHANDISER</span>
-            <span class="job-sub">PROMODIZER</span>
+            <button class="job-sub" data-toggle="modal" data-target="#myModal">MERCHANDISER</button>
+            <button class="job-sub" data-toggle="modal" data-target="#myModal">PROMODIZER</button>
         </div>
     </div>
 
