Added routes to header and footer

--- a/about-us.html
+++ b/about-us.html
@@ -42,13 +42,15 @@
     <section class="position-relative">
         <div class="row d-flex align-items-center header-row p-5">
             <div class="col-6 d-flex justify-content-center pr-3">
-                <img src="assets/worksync-logo.png" class="home-logo">
+                <a href="index.html">
+                    <img src="assets/worksync-logo.png" class="home-logo">
+                </a>
             </div>
             <div class="homenav col-6 d-flex justify-content-start pl-5">
-                <a href="#service" class="navi text-muted ml-5">SERVICES</a>
+                <a href="services.html" class="navi text-muted ml-5">SERVICES</a>
                 <a href="#footer" class="navi text-muted ml-5">INQUIRIES</a>
-                <a href="#service-top" class="navi text-muted ml-5">JOIN US</a>
-                <a href="#welcome" class="navi text-muted ml-5">ABOUT US</a>
+                <a href="join-us.html" class="navi text-muted ml-5">JOIN US</a>
+                <a href="about-us.html" class="navi text-muted ml-5">ABOUT US</a>
             </div>
         </div>
     </section>
@@ -142,13 +144,13 @@
             <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3 footer-left d-flex justify-content-start align-items-start flex-column">
                 <div class="footer-nav d-flex flex-column mb-4">
                     <span class="footer-nav-item mb-2">
-                        <a href="#welcome">ABOUT US</a>
+                        <a href="about-us.html">ABOUT US</a>
                     </span>
                     <span class="footer-nav-item mb-2">
-                        <a href="#service-top">SERVICES</a>
+                        <a href="services.html">SERVICES</a>
                     </span>
                     <span class="footer-nav-item mb-2">
-                        <a href="#why">JOIN US</a>
+                        <a href="join-us.html">JOIN US</a>
                     </span>
                 </div>
 
