Added hamburger menu in mobile dims

--- a/join-us.html
+++ b/join-us.html
@@ -72,6 +72,60 @@
         </div>
     </div>
 
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <!-- Collapsible Section -->
+            <div class="collapse navbar-collapse slide-from-right" id="navbarNav">
+                <!-- Close Button -->
+                <div class="top-collapse">
+                    <img src="assets/worksync-white.png" alt="">
+                    <button type="button" class="close-btn" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">HOME</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="services.html" class="nav-link">SERVICES</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#footer" class="nav-link">INQUIRIES</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="join-us.html" class="nav-link">JOIN US</a>
+                    </li>
+                    <li class="nav-item" style="border-bottom: none !important;">
+                        <a href="about-us.html" class="nav-link">ABOUT US</a>
+                    </li>
+                </ul>
+
+                <div class="info-collapse">
+                    <div class="footer-right_item mb-3">
+                        <i class="bi bi-telephone-outbound-fill"></i>
+                        <span>
+                            +63 (926) 638 7233
+                            info@worksyncsolutions.com
+                        </span>
+                    </div>
+
+                    <div class="footer-right_item mb-3">
+                        <i class="bi bi-geo-alt-fill"></i>
+                        <span>
+                            S13 LYSA QUEEN Bldg., KM 37, MacArthur Highway, San Pablo, Malolos City, Bulacan, 3000
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
+
     <!-- Intro -->
 
     <section class="position-relative">
@@ -116,13 +170,13 @@
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 jobs d-flex flex-column right-job">
             <div class="job-title mb-2">Factory support staff</div>
             <button class="job-sub" data-toggle="modal" data-target="#myModal">QC LINE INSPECTOR</span>
-            <button class="job-sub" data-toggle="modal" data-target="#myModal">SORTER</button>
-            <button class="job-sub" data-toggle="modal" data-target="#myModal">PACKER</button>
-            <button class="job-sub" data-toggle="modal" data-target="#myModal">MATERIALS HANDLER</button>
+                <button class="job-sub" data-toggle="modal" data-target="#myModal">SORTER</button>
+                <button class="job-sub" data-toggle="modal" data-target="#myModal">PACKER</button>
+                <button class="job-sub" data-toggle="modal" data-target="#myModal">MATERIALS HANDLER</button>
 
-            <div class="job-title mb-2 mt-4">Warehouse and materials handling</div>
-            <button class="job-sub" data-toggle="modal" data-target="#myModal">FORKLIFT OPERATOR</button>
-            <button class="job-sub" data-toggle="modal" data-target="#myModal">WAREHOUSEMAN CLERK</button>
+                <div class="job-title mb-2 mt-4">Warehouse and materials handling</div>
+                <button class="job-sub" data-toggle="modal" data-target="#myModal">FORKLIFT OPERATOR</button>
+                <button class="job-sub" data-toggle="modal" data-target="#myModal">WAREHOUSEMAN CLERK</button>
         </div>
 
         <div
@@ -269,9 +323,11 @@
     </section>
 
     <!-- Bootstrap JS and dependencies (optional but recommended) -->
+    <script src="js/header.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
