--- a/about-us.html
+++ b/about-us.html
@@ -34,7 +34,59 @@
 <body>
 
     <!-- Header -->
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <!-- Collapsible Section -->
+            <div class="collapse navbar-collapse slide-from-right" id="navbarNav">
+                <!-- Close Button -->
+                <div class="top-collapse">
+                    <img src="assets/worksync-white.png" alt="">
+                    <button type="button" class="close-btn" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">HOME</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="services.html" class="nav-link">SERVICES</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#footer" class="nav-link">INQUIRIES</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="join-us.html" class="nav-link">JOIN US</a>
+                    </li>
+                    <li class="nav-item" style="border-bottom: none !important;">
+                        <a href="about-us.html" class="nav-link">ABOUT US</a>
+                    </li>
+                </ul>
 
+                <div class="info-collapse">
+                    <div class="footer-right_item mb-3">
+                        <i class="bi bi-telephone-outbound-fill"></i>
+                        <span>
+                            +63 (926) 638 7233
+                            info@worksyncsolutions.com
+                        </span>
+                    </div>
+
+                    <div class="footer-right_item mb-3">
+                        <i class="bi bi-geo-alt-fill"></i>
+                        <span>
+                            S13 LYSA QUEEN Bldg., KM 37, MacArthur Highway, San Pablo, Malolos City, Bulacan, 3000
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
 
 
     <!-- Intro -->
@@ -67,7 +119,7 @@
 
     <section class="about-us">
         <div class="row about-us_row">
-            
+
             <div class="col-12 about-title_mobile mb-5" style="display: none;">
                 <span>About Us</span>
             </div>
@@ -141,7 +193,8 @@
 
     <section class="footer" id="footer">
         <div class="row footer-row">
-            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3 footer-left d-flex justify-content-start align-items-start flex-column">
+            <div
+                class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3 footer-left d-flex justify-content-start align-items-start flex-column">
                 <div class="footer-nav d-flex flex-column mb-4">
                     <span class="footer-nav-item mb-2">
                         <a href="about-us.html">ABOUT US</a>
@@ -166,7 +219,8 @@
                 <img src="assets/worksync-footer.png" class="footer-left_image">
             </div>
 
-            <div class="footer1 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 d-flex flex-column align-items-start justify-content-start footer-center">
+            <div
+                class="footer1 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 d-flex flex-column align-items-start justify-content-start footer-center">
                 <div class="footer-right_item mb-3">
                     <i class="bi bi-telephone-outbound-fill"></i>
                     <span>
@@ -178,7 +232,7 @@
                 <div class="footer-right_item mb-3">
                     <i class="bi bi-geo-alt-fill"></i>
                     <span>
-                        S13 LYSA QUEEN Bldg., KM 37,  MacArthur Highway, San Pablo, Malolos City, Bulacan, 3000
+                        S13 LYSA QUEEN Bldg., KM 37, MacArthur Highway, San Pablo, Malolos City, Bulacan, 3000
                     </span>
                 </div>
 
@@ -211,19 +265,21 @@
                         <span>MESSAGE*</span>
                         <textarea></textarea>
                     </div>
-                    </div>
-                    <div class="col-12 button-cont d-flex mb-3 justify-content-end">
-                        <button>SEND INQUIRY</button>
-                    </div>
+                </div>
+                <div class="col-12 button-cont d-flex mb-3 justify-content-end">
+                    <button>SEND INQUIRY</button>
                 </div>
             </div>
+        </div>
         </div>
     </section>
 
     <!-- Bootstrap JS and dependencies (optional but recommended) -->
+    <script src="js/header.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
