--- a/index.html
+++ b/index.html
@@ -32,7 +32,59 @@
 
     <!-- Header -->
 
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <!-- Collapsible Section -->
+            <div class="collapse navbar-collapse slide-from-right" id="navbarNav">
+                <!-- Close Button -->
+                <div class="top-collapse">
+                    <img src="assets/worksync-white.png" alt="">
+                    <button type="button" class="close-btn" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">HOME</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="services.html" class="nav-link">SERVICES</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#footer" class="nav-link">INQUIRIES</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="join-us.html" class="nav-link">JOIN US</a>
+                    </li>
+                    <li class="nav-item" style="border-bottom: none !important;">
+                        <a href="about-us.html" class="nav-link">ABOUT US</a>
+                    </li>
+                </ul>
 
+                <div class="info-collapse">
+                    <div class="footer-right_item mb-3">
+                        <i class="bi bi-telephone-outbound-fill"></i>
+                        <span>
+                            +63 (926) 638 7233
+                            info@worksyncsolutions.com
+                        </span>
+                    </div>
+
+                    <div class="footer-right_item mb-3">
+                        <i class="bi bi-geo-alt-fill"></i>
+                        <span>
+                            S13 LYSA QUEEN Bldg., KM 37, MacArthur Highway, San Pablo, Malolos City, Bulacan, 3000
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
 
     <!-- Intro -->
 
@@ -72,8 +124,10 @@
                     solutions to staffing needs. Our extensive knowledge and experience in Quality, Productivity and
                     Innovation would redefine the industry.
                     <br> <br>
-                    We place an emphasis on <span style="font-weight: 700;">efficiency</span>, <span style="font-weight: 700;">innovative training</span> and
-                    <span style="font-weight: 700;">technology solutions</span> empowering our clients for global success.
+                    We place an emphasis on <span style="font-weight: 700;">efficiency</span>, <span
+                        style="font-weight: 700;">innovative training</span> and
+                    <span style="font-weight: 700;">technology solutions</span> empowering our clients for global
+                    success.
                 </span>
 
                 <img src="assets/home_welcome.png" class="mt-5">
@@ -104,18 +158,21 @@
                     </span>
 
                     <ul class="why-list">
-                        <li class="why-item">Stringent Capabilities, Skills, and Integrity Assessment / Pre-screening.</li>
+                        <li class="why-item">Stringent Capabilities, Skills, and Integrity Assessment / Pre-screening.
+                        </li>
                         <li class="why-item">Use of social media screening process when necessary.</li>
                         <li class="why-item">Technology Enabled Recruitment and Applicants Tracking and Management.</li>
                         <li class="why-item">Ticketing System to Streamline Manpower Requisition Process.</li>
-                        <li class="why-item">Comprehensive Training on the Basics of Productivity and Quality Improvement Prior to Placement.</li>
+                        <li class="why-item">Comprehensive Training on the Basics of Productivity and Quality
+                            Improvement Prior to Placement.</li>
                         <li class="why-item">Technology Enabled Time Keeping and Attendance System.</li>
                         <li class="why-item">Regular Performance Review and Feedback Mechanism.</li>
                         <li class="why-item">Empowering Employee to Identify Opportunities for Process Improvement.</li>
                         <li class="why-item">Ticketing System to Manage Client Requests and Escalations.</li>
                         <li class="why-item">Defined Service Level Agreement.</li>
                         <li class="why-item">Data Analytics / Dashboard Reporting.</li>
-                        <li class="why-item">Regular Client Cadence Meeting to Review Performance and Discuss Opportunities for Improvement.</li>
+                        <li class="why-item">Regular Client Cadence Meeting to Review Performance and Discuss
+                            Opportunities for Improvement.</li>
                         <li class="why-item">HRIS / Payroll Solution Implementation (For Development).</li>
                     </ul>
                 </div>
@@ -281,9 +338,11 @@
     </section>
 
     <!-- Bootstrap JS and dependencies (optional but recommended) -->
+    <script src="js/header.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
