--- a/services.html
+++ b/services.html
@@ -35,7 +35,59 @@
 
     <!-- Header -->
 
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <!-- Collapsible Section -->
+            <div class="collapse navbar-collapse slide-from-right" id="navbarNav">
+                <!-- Close Button -->
+                <div class="top-collapse">
+                    <img src="assets/worksync-white.png" alt="">
+                    <button type="button" class="close-btn" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">HOME</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="services.html" class="nav-link">SERVICES</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#footer" class="nav-link">INQUIRIES</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="join-us.html" class="nav-link">JOIN US</a>
+                    </li>
+                    <li class="nav-item" style="border-bottom: none !important;">
+                        <a href="about-us.html" class="nav-link">ABOUT US</a>
+                    </li>
+                </ul>
 
+                <div class="info-collapse">
+                    <div class="footer-right_item mb-3">
+                        <i class="bi bi-telephone-outbound-fill"></i>
+                        <span>
+                            +63 (926) 638 7233
+                            info@worksyncsolutions.com
+                        </span>
+                    </div>
+
+                    <div class="footer-right_item mb-3">
+                        <i class="bi bi-geo-alt-fill"></i>
+                        <span>
+                            S13 LYSA QUEEN Bldg., KM 37, MacArthur Highway, San Pablo, Malolos City, Bulacan, 3000
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
 
     <!-- Intro -->
 
@@ -94,7 +146,8 @@
                                 preventing defects to deliver. Additionally, they handle packing and sorting, ensuring
                                 accurate categorization and packaging for distribution. </p>
                             <div class="card-button-col w-100 d-flex justify-content-end">
-                                <button class="card-button btn" type="button" data-toggle="modal" data-target="#myModal">
+                                <button class="card-button btn" type="button" data-toggle="modal"
+                                    data-target="#myModal">
                                     MORE INFO
                                 </button>
                             </div>
@@ -111,7 +164,8 @@
                                 space, improve inventory management, and ensure timely dispatch, providing a seamless
                                 flow of materials and products. </p>
                             <div class="card-button-col w-100 d-flex justify-content-end">
-                                <button class="card-button btn" type="button" data-toggle="modal" data-target="#myModal">
+                                <button class="card-button btn" type="button" data-toggle="modal"
+                                    data-target="#myModal">
                                     MORE INFO
                                 </button>
                             </div>
@@ -138,7 +192,8 @@
                                 </div>
                             </div>
                             <div class="card-button-col w-100 d-flex justify-content-end">
-                                <button class="card-button btn" type="button" data-toggle="modal" data-target="#myModal">
+                                <button class="card-button btn" type="button" data-toggle="modal"
+                                    data-target="#myModal">
                                     MORE
                                 </button>
                             </div>
@@ -156,7 +211,8 @@
                                 </div>
                             </div>
                             <div class="card-button-col w-100 d-flex justify-content-end">
-                                <button class="card-button btn" type="button" data-toggle="modal" data-target="#myModal">
+                                <button class="card-button btn" type="button" data-toggle="modal"
+                                    data-target="#myModal">
                                     MORE
                                 </button>
                             </div>
@@ -174,7 +230,8 @@
                                 </div>
                             </div>
                             <div class="card-button-col w-100 d-flex justify-content-end">
-                                <button class="card-button btn" type="button" data-toggle="modal" data-target="#myModal">
+                                <button class="card-button btn" type="button" data-toggle="modal"
+                                    data-target="#myModal">
                                     MORE
                                 </button>
                             </div>
@@ -192,7 +249,8 @@
                                 </div>
                             </div>
                             <div class="card-button-col w-100 d-flex justify-content-end">
-                                <button class="card-button btn" type="button" data-toggle="modal" data-target="#myModal">
+                                <button class="card-button btn" type="button" data-toggle="modal"
+                                    data-target="#myModal">
                                     MORE
                                 </button>
                             </div>
@@ -214,7 +272,8 @@
                                 </div>
                             </div>
                             <div class="card-button-col w-100 d-flex justify-content-end">
-                                <button class="card-button btn" type="button" data-toggle="modal" data-target="#myModal">
+                                <button class="card-button btn" type="button" data-toggle="modal"
+                                    data-target="#myModal">
                                     MORE
                                 </button>
                             </div>
@@ -232,7 +291,8 @@
                                 </div>
                             </div>
                             <div class="card-button-col w-100 d-flex justify-content-end">
-                                <button class="card-button btn" type="button" data-toggle="modal" data-target="#myModal">
+                                <button class="card-button btn" type="button" data-toggle="modal"
+                                    data-target="#myModal">
                                     MORE
                                 </button>
                             </div>
@@ -250,7 +310,8 @@
                                 </div>
                             </div>
                             <div class="card-button-col w-100 d-flex justify-content-end">
-                                <button class="card-button btn" type="button" data-toggle="modal" data-target="#myModal">
+                                <button class="card-button btn" type="button" data-toggle="modal"
+                                    data-target="#myModal">
                                     MORE
                                 </button>
                             </div>
@@ -268,7 +329,8 @@
                                 </div>
                             </div>
                             <div class="card-button-col w-100 d-flex justify-content-end">
-                                <button class="card-button btn" type="button" data-toggle="modal" data-target="#myModal">
+                                <button class="card-button btn" type="button" data-toggle="modal"
+                                    data-target="#myModal">
                                     MORE
                                 </button>
                             </div>
@@ -463,9 +525,11 @@
     </section>
 
     <!-- Bootstrap JS and dependencies (optional but recommended) -->
+    <script src="js/header.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
